tests/snapshots/run_wpt_conformance__coreml_linear_float32_positive_4D_tensor_all_options__positive_options_alpha_and_positive_options_beta_.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, \"PASS\")"
---
(
    "linear.https.any.js",
    "linear float32 positive 4D tensor all options (positive options.alpha and positive options.beta)",
    "coreml",
    "PASS",
)
